# linkdin_tools

./: .env.example  .gitignore  README.md  SESSION_SETUP.md  SETUP.md  copy_chrome_profile.py  main.py  pyproject.toml  requirements.txt  temp  temp2.html  test_company_researcher.py  test_draft_generator.py
golden_drafts/: cold_email_soul.md  example_1.md  example_2.md
scripts/: README.md  __init__.py  enrich_companies.py  export_linkedin_cookies.py  generate_drafts.py  pipeline_config.yaml  pipeline_daemon.py  scrape_jobs.py  start_pipeline.sh  status_pipeline.sh  stop_pipeline.sh
src/: __init__.py  company_researcher.py  company_researcher_playwright.py  database.py  draft_generator.py  google_sheets_client.py  job_scraper.py  job_scraper_playwright.py  message_generator.py  models.py  orchestrator.py  session_manager.py
src/utils/: config.py  export.py  logger.py
